constraints/pod-security-policy-read-only-root-filesystem-samples-psp-readonlyrootfilesystem-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPReadOnlyRootFilesystem
metadata: # kpt-merge: /psp-readonlyrootfilesystem
  name: psp-readonlyrootfilesystem
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - config-management-system
      - kube-system
